# janus-gateway

./: .clang-format  .dockerignore  .editorconfig  .eslintrc.js  .gitattributes  .gitignore  .gitmodules  .travis.yml  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  COPYING  Dockerfile  Dockerfile-dev  Dockerfile.alpine  Dockerfile.rrj  Makefile  Makefile.am  README  README.md  SECURITY.md  apierror.c  apierror.h  auth.c  auth.h  autogen.sh  bower.json  ciccio.mkv  cmdline.c  cmdline.h  common.make  compileme.sh  config.c  config.h  configure.ac  debug.h  dtls-bio.c  dtls-bio.h  dtls.c  dtls.h  (+61 more)
.github/: CONTRIBUTING.md  ISSUE_TEMPLATE.md
auth-external/: .gitignore  README  authserver-example.js  package.json
certs/: README.md  mycert.key  mycert.pem
conf/: janus.cfg  janus.cfg.in  janus.cfg.sample.in  janus.eventhandler.gelfevh.jcfg.sample  janus.eventhandler.logevh.jcfg.sample  janus.eventhandler.mqttevh.cfg.sample  janus.eventhandler.mqttevh.jcfg.sample  janus.eventhandler.nanomsgevh.jcfg.sample  janus.eventhandler.nngevh.jcfg.sample  janus.eventhandler.prometheusevh.cfg.sample  janus.eventhandler.rabbitmqevh.cfg.sample  janus.eventhandler.rabbitmqevh.jcfg.sample  janus.eventhandler.rabbitmqevh.yaml.sample  janus.eventhandler.sampleevh.cfg.sample  janus.eventhandler.sampleevh.jcfg.sample  janus.eventhandler.sampleevh.yaml.sample  janus.eventhandler.wsevh.jcfg.sample  janus.jcfg  janus.jcfg.sample  janus.jcfg.sample.in  janus.logger.homerlog.jcfg.sample  janus.logger.jsonlog.jcfg.sample  janus.plugin.audiobridge.cfg  janus.plugin.audiobridge.cfg.sample  janus.plugin.audiobridge.jcfg.sample  janus.plugin.audiobridge.yaml.sample  janus.plugin.auviousrecordplay.cfg.sample.in  janus.plugin.auviousroom.cfg.sample  janus.plugin.duktape.cfg.sample.in  janus.plugin.duktape.jcfg.sample.in  janus.plugin.echotest.cfg.sample  janus.plugin.echotest.jcfg.sample  janus.plugin.lua.cfg.sample.in  janus.plugin.lua.jcfg.sample.in  janus.plugin.moq.jcfg.sample  janus.plugin.nosip.cfg.sample  janus.plugin.nosip.jcfg.sample  janus.plugin.nosip.yaml.sample  janus.plugin.recordplay.cfg.sample.in  janus.plugin.recordplay.jcfg.sample.in  (+59 more)
debian/: TODO  changelog  control  copyright  copyright-check  copyright_hints  gbp.conf  janus-demos.examples  janus-demos.install  janus-demos.links  janus-dev.install  janus-doc.docs  janus-doc.links  janus-doc.lintian-overrides  janus-tools.install  janus-tools.manpages  janus.init  janus.install  janus.manpages  janus.service  rules  watch
docker/: .dockerignore  base.docker  build-docker-images.sh  entrypoint.sh  http-w-openssl.docker  js-modules.docker  travis-ci.sh
docs/: Makefile  Makefile.am  doxy-boot.js  footer.html  header.html  janus-doxygen.cfg
events/: eventhandler.h  janus_gelfevh.c  janus_logevh.c  janus_mqttevh.c  janus_nanomsgevh.c  janus_nngevh.c  janus_prometheusevh.cc  janus_rabbitmqevh.c  janus_sampleevh.c  janus_wsevh.c
fuzzers/: build.sh  config.sh  fuzz-rtcp.c  fuzz-rtp.c  rtcp_fuzzer.c  rtp_fuzzer.c  run.sh  sdp_fuzzer.c  standalone.c
html/: Makefile.am  adapter.js  admin.html  admin.js  audiobridgetest.html  audiobridgetest.js  canvas.html  canvas.js  citeus.html  demos.html  devicetest.html  devicetest.js  e2etest.html  e2etest.js  echotest.html  echotest.js  extension-sample.crx  footer.html  index.html  janus.js  janus.js.bak  janus.nojquery.js  multiopus.html  multiopus.js  mvideoroomtest.html  mvideoroomtest.js  navbar.html  nosiptest.html  nosiptest.js  package-lock.json  package.json  perctest.html  perctest.js  recordplaytest.html  recordplaytest.js  screensharingtest.html  screensharingtest.js  settings.js  sipretest.html  sipretest.js  (+27 more)
loggers/: janus_homerlog.c  janus_jsonlog.c  logger.h
npm/: .gitignore  README.md  janus.d.ts  module.js  package-lock.json  package.json  (+3 more)
src/: CMakeLists.txt  Makefile.am  TODO.txt  alarm-client.c  alarm-client.h  apierror.h  auth.c  auth.h  bwe.c  bwe.h  config.c  config.h  debug.h  dtls-bio.c  dtls-bio.h  dtls.c  dtls.h  events.c  events.h  ice.c  ice.h  ip-utils.c  ip-utils.h  janus-cfgconv.1  janus-cfgconv.c  janus.1  janus.c  janus.h  log.c  log.h  mach_gettime.h  mainpage.dox  mutex.h  options.c  options.h  record.c  record.h  roq.c  roq.h  roqfwd.c  (+21 more)
src/events/: eventhandler.h  janus_gelfevh.c  janus_logevh.c  janus_mqttevh.c  janus_nanomsgevh.c  janus_rabbitmqevh.c  janus_sampleevh.c  janus_wsevh.c
src/loggers/: janus_jsonlog.c  logger.h
src/plugins/: janus_audiobridge.c  janus_dataroom.c  janus_duktape.c  janus_duktape_data.h  janus_duktape_extra.c  janus_duktape_extra.h  janus_echotest.c  janus_lua.c  janus_lua_data.h  janus_lua_extra.c  janus_lua_extra.h  janus_moq.c  janus_nosip.c  janus_recordplay.c  janus_sip.c  janus_streaming.c  janus_textroom.c  janus_videocall.c  janus_videoroom.c  janus_voicemail.c  plugin.c  plugin.h
src/plugins/audiobridge-deps/: COPYING  jitter.c  os_support.h  resample.c
src/plugins/audiobridge-deps/limiter/: limiter.c  limiter.h  limiter_clamp_test.c  limiter_scale_test.c
src/plugins/audiobridge-deps/speex/: speex_jitter.h  speexdsp_types.h
src/plugins/duktape/: janus-sdp.js
src/plugins/duktape-deps/: duk_config.h  duk_console.c  duktape.c  duktape.h
src/plugins/lua/: echotest.lua  janus-sdp.lua  videoroom.lua
src/plugins/recordings/: 1234.nfo
src/plugins/streams/: music.mulaw  radio.alaw  remembrance.opus  test_gstreamer.sh  test_gstreamer1.sh  test_gstreamer1_multistream.sh
src/postprocessing/: janus-pp-rec.1  janus-pp-rec.c  janus-pp-rec.ggo  mjr2pcap.1  mjr2pcap.c  obuparse.c  obuparse.h  pcap2mjr.1  pcap2mjr.c  pp-av1.c  pp-av1.h  pp-avformat.c  pp-avformat.h  pp-binary.h  pp-g711.c  pp-g722.c  pp-g722.h  pp-h264.c  pp-h265.c  pp-h265.h  pp-l16.c  pp-l16.h  pp-options.c  pp-options.h  pp-opus.c  pp-opus.h  pp-rtp.h  pp-srt.c  pp-webm.c
src/transports/: janus_http.c  janus_mqtt.c  janus_nanomsg.c  janus_pfunix.c  janus_rabbitmq.c  janus_websockets.c  janus_webtransport.c  transport.c  transport.h
tests/: Makefile.am  README.md  check_duktape_extra_curl.c  mock_http_server.js
tests/modules/: test.js
(+386 files in other folders)
